# amazon-bedrock-workshop

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SETUP.md  mise.toml  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  content_update.yml
.github/workflows/: auto-merge.yml  codeowners-audit.yml  dependabot-auto-merge.yml  lint.yml  notebook-smoke-test.yml  stale.yml  sync-custom-models.yml  weekly-link-check.yml
01_Text_generation/: 01_text_and_code_generation_w_bedrock.ipynb  README.md
02_Knowledge_Bases_and_RAG/: 1_create-kb-and-ingest-documents.ipynb  2_managed-rag-with-retrieve-and-generate-api.ipynb  3_customized-rag-with-retrieve-api.ipynb  4_clean-up.ipynb  README.md  utility.py
03_Model_customization/: README.md
03_Model_customization/bedrock-fine-tuning/amazon-titan-image-generator/: 1-TIGFT-customization-job.ipynb  2-TIGFT-provisioned-throughput-inference.ipynb  README.md
03_Model_customization/bedrock-fine-tuning/claude-haiku/: 00_Setup_and_DataPrep_Haiku.ipynb  01_Claude_Haiku_Fine_Tuning.ipynb
03_Model_customization/bedrock-reinforcement-fine-tuning/datasets/: rft_test_validation_data.jsonl  rft_train_data.jsonl
03_Model_customization/bedrock-reinforcement-fine-tuning/helpers/: __init__.py  preprocess_gsm8k.py
03_Model_customization/bedrock-reinforcement-fine-tuning/reward-functions/: gsm8k_gptoss_rew_func.py  gsm8k_rew_func.py
03_Model_customization/import_models/: README.md  fmeval_imported_models.ipynb  perf-test-imported_model.ipynb
03_Model_customization/import_models/flan-t5/: flant5-finetune-medical-terms.ipynb
03_Model_customization/import_models/llama-2/: llama2-finetuning-boolq.ipynb
03_Model_customization/import_models/llama-3/: DeepSeek-R1-Distill-Llama-Noteb.ipynb  benchmark-deepseek-r1-distill-llama-llmperf.ipynb  customized-text-to-sql-model.ipynb  llama3-ngrammedqa-fine-tuning.ipynb  llama3-sft-fine-tuning.ipynb
03_Model_customization/import_models/llama-3.1-jumpstart-chess/: llama-3.1-8b-jumpstart-chess-finetuning.ipynb  test_chess_model.ipynb
03_Model_customization/import_models/mistral-jumpstart/: custom-model-import-mistral-jumpstart.ipynb
03_Model_customization/model_distillation/: Distillation-via-S3-input.ipynb  Historical_invocation_distillation.ipynb  README.md  utils.py
04_Agents/: .gitignore  05_agents.ipynb  README.md  requirements.txt
04_Agents/images/: aws-mediaconvert-job-template.json
04_Agents/prereqs/: dynamodb.py  knowledge_base.py  prereqs_config.yaml
04_Agents/utils/: deploy_prereqs.sh  utils.py
05_Distributed_Inference_Engine/: README.md  mantle_workshop_notebook.ipynb
tutor/: requirements.txt
tutor/backend/: agent.py  main.py  tools.py
tutor/learning_paths/: distributed-inference.md  embeddings.md  rag.md  text-generation.md
(+49 files in other folders)
