[project]
name = "amazon-bedrock-workshop"
version = "0.1.0"
description = "Dependency specification for introductory hands-on workshop on Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.24",
    "ipython>=9.14.1",
    "openai>=2.41.0",
    "requests>=2.34.2",
]

[dependency-groups]
lab2 = [
    "opensearch-py>=3.2.0",
    "requests-aws4auth>=1.3.2",
]
lab3 = [
    "bert-score>=0.3.13",
    "datasets>=5.0.0",
    "fmeval>=1.2.3",
    "ipywidgets>=8.1.8",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pillow>=12.2.0",
    "py7zr>=1.1.0",
    "pypdf>=6.13.0",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.68.1",
    "urllib3>=2.7.0",
]
lab4 = [
    "bedrock-agentcore>=1.13.0",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "opensearch-py>=3.2.0",
    "retrying>=1.4.2",
    "strands-agents>=1.42.0",
    "strands-agents-tools>=0.8.0",
]
